--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To Do App | Pricing</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous" />
-    <link rel="stylesheet" href="/frontend/css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- ↓ Navbar ↓ -->
@@ -13,10 +13,10 @@
     <nav class="navbar navbar-expand-lg">
       <div class="container">
         <a href=".index.html" class="navbar-brabd">
-          <img src="/frontend/images/logo-icon.svg" alt="Logo" height="50px" width="auto" />
+          <img src="./images/logo-icon.svg" alt="Logo" height="50px" width="auto" />
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle">
-          <img src="/frontend/images/menu-icon.svg" alt="Hamburger Icon" height="40px" width="auto" />
+          <img src="./images/menu-icon.svg" alt="Hamburger Icon" height="40px" width="auto" />
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
@@ -131,7 +131,7 @@
       <div class="container py-5">
         <div class="d-flex justify-content-between flex-column gap-5 gap-md-0 flex-md-row align-items-center px-3 mb-5">
           <a href="./index.html">
-            <img src="/frontend/images/logo-icon.svg" alt="Logo" height="120px" width="auto" />
+            <img src="./images/logo-icon.svg" alt="Logo" height="120px" width="auto" />
           </a>
           <div class="col-12 col-sm-8 col-md-7 col-lg-5 col-xl-4">
             <h1 class="text-white mb-3 text-center text-md-start">Subscribe to our Newsletter</h1>
