--- a/frontend/features.html
+++ b/frontend/features.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous" />
 
     <!-- Your styles -->
-    <link rel="stylesheet" href="/frontend/css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
 
     <!-- FullCalendar (CSS) -->
     <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/index.global.min.css" rel="stylesheet" />
@@ -37,10 +37,10 @@
     <nav class="navbar navbar-expand-lg">
       <div class="container">
         <a href=".index.html" class="navbar-brabd">
-          <img src="/frontend/images/logo-icon.svg" alt="Logo" height="50px" width="auto" />
+          <img src="./images/logo-icon.svg" alt="Logo" height="50px" width="auto" />
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle">
-          <img src="/frontend/images/menu-icon.svg" alt="Hamburger Icon" height="40px" width="auto" />
+          <img src="./images/menu-icon.svg" alt="Hamburger Icon" height="40px" width="auto" />
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
@@ -73,7 +73,7 @@
       <div class="container py-5">
         <div class="d-flex justify-content-between flex-column gap-5 gap-md-0 flex-md-row align-items-center px-3 mb-5">
           <a href="./index.html">
-            <img src="/frontend/images/logo-icon.svg" alt="Logo" height="120px" width="auto" />
+            <img src="./images/logo-icon.svg" alt="Logo" height="120px" width="auto" />
           </a>
           <div class="col-12 col-sm-8 col-md-7 col-lg-5 col-xl-4">
             <h1 class="text-white mb-3 text-center text-md-start">Subscribe to our Newsletter</h1>
@@ -166,7 +166,7 @@
     <!-- [ADD CALENDAR INIT BEFORE </body>] -->
 <script>
   // Same backend your frontend uses in api.js
-  const TASKS_API = "http://localhost:3000/tasks";
+
 
   // Convert your task shape -> calendar event
   function taskToEvent(t) {
